# __COPYRIGHT__
# __FILE__ __REVISION__ __DATE__ __DEVELOPER__


                 SCons - a software construction tool

                            Change Log



RELEASE 0.97 - XXX

  From Chad Austin:

  - Allow Help() to be called multiple times, appending to the help
    text each call.

  From Steve Christensen:

  - Handle exceptions from Python functions as build actions.

  - Add a set of canned PathOption validators:  PathExists (the default),
    PathIsFile, PathIsDir and PathIsDirCreate.

  From Eric Frias:

  - Huge performance improvement:  wrap the tuples representing an
    include path in an object, so that the time it takes to hash the
    path doesn't grow porportionally to the length of the path.

  From Gottfried Ganssauge:

  - Fix SCons on SuSE/AMD-64 Linux by having the wrapper script also
    check for the build engine in the parent directory of the Python
    library directory (/usr/lib64 instead of /usr/lib).

  From Steven Knight:

  - When compiling with Microsoft Visual Studio, don't include the ATL and
    MFC directories in the default INCLUDE and LIB environment variables.

  - Remove the following deprecated features:  the ParseConfig()
    global function (deprecated in 0.93); the misspelled "validater"
    keyword to the Options.Add() method (deprecated in 0.91); the
    SetBuildSignatureType(), SetContentSignatureType(), SetJobs() and
    GetJobs() global functions (deprecated in 0.14).

  - Fix problems with corrupting the .sconsign.dblite file when
    interrupting builds by writing to a temporary file and renaming,
    not writing the file directly.

  - Fix a 0.96 regression where when running with -k, targets built from
    walking dependencies later on the command line would not realize
    that a dependency had failed an earlier build attempt, and would
    try to rebuild the dependent targets.

  - Change the final messages when using -k and errors occur from
    "{building,cleaning} terminated because of errors" to "done